[gd_scene load_steps=4 format=3 uid="uid://dqnpvm0ednoqy"]

[ext_resource type="Script" uid="uid://dhxayk8olv27m" path="res://Scripts/game_over.gd" id="1_y26ei"]
[ext_resource type="Texture2D" uid="uid://8sw8ysvs5ggl" path="res://Assets/Background.png" id="2_ccer4"]
[ext_resource type="Texture2D" uid="uid://f8tgt8kjxkfs" path="res://Assets/Game-Over.png" id="3_8u835"]

[node name="Game_Over" type="Node2D"]
script = ExtResource("1_y26ei")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ccer4")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 436.0
offset_top = 188.0
offset_right = 1971.0
offset_bottom = 956.0
texture = ExtResource("3_8u835")

[node name="By_Line" type="Label" parent="."]
offset_left = 518.0
offset_top = 1251.0
offset_right = 1849.0
offset_bottom = 1318.0
theme_override_font_sizes/font_size = 48
text = "GMTK Game Jam 2025 Submission - Harry, Elliott & Jordan"

[node name="New_Game_Button" type="Button" parent="."]
offset_left = 836.0
offset_top = 1057.0
offset_right = 1482.0
offset_bottom = 1202.0
theme_override_font_sizes/font_size = 100
text = "START AGAIN"
metadata/_edit_use_anchors_ = true

[node name="Loops_Label" type="Label" parent="."]
custom_minimum_size = Vector2(1028, 0)
offset_left = 642.0
offset_top = 933.0
offset_right = 1670.0
offset_bottom = 1029.0
theme_override_font_sizes/font_size = 70
text = "Loops: "
horizontal_alignment = 1

[connection signal="pressed" from="New_Game_Button" to="." method="_on_new_game_button_pressed"]
